--- a/HOAM_MUSEUM_OF_ART/index.html
+++ b/HOAM_MUSEUM_OF_ART/index.html
@@ -18,50 +18,57 @@
         <a href="#gnb">대메뉴 바로가기</a>
     </div>
     <div id="wrap">
-        <header class="header">
+        <header class="menu_open">
             <div class="wrapper">
                 <div class="inner">
                     <h2 class="logo">
                         <a href="index.html">로고</a>
                     </h2>
-                    <div class="gnb">
-                        <ul class="depth1">
-                            <li>
-                                <a href="#none">호암</a>
-                                <ul class="depth2">
-                                    <li><a href="#none">미술관 소개</a></li>
-                                    <li><a href="#none">전통정원 희원</a></li>
-                                    <li><a href="#none">오시는 길</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#none">관람안내</a>
-                                <ul class="depth2">
-                                    <li><a href="#none">관람</a></li>
-                                    <li><a href="#none">전시</a></li>
-                                    <li><a href="#none">오디오 가이드 APP</a></li>
-                                    <li><a href="#none">리움호암 셔틀버스예약</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#none">커뮤니티</a>
-                                <ul class="depth2">
-                                    <li><a href="#none">공지</a></li>
-                                    <li><a href="#none">보도자료</a></li>
-                                    <li><a href="#none"><span>온라인 스토어</span></a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#none">프로그램</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tnb">
-                        <ul>
-                            <li><a href="#none">JOIN US</a></li>
-                            <li><a href="#none">LOGIN</a></li>
-                            <li><a href="https://www.leeumhoam.org/leeum">LEEUM</a></li>
-                        </ul>
+                    <button class="gnb_open">메뉴열기</button>
+                    <div class="gnb_wrap">
+                        <div class="gnb">
+                            <ul class="depth1">
+                                <li>
+                                    <a href="#none">호암</a>
+                                    <ul class="depth2">
+                                        <li><a href="#none">미술관 소개</a></li>
+                                        <li><a href="#none">전통정원 희원</a></li>
+                                        <li><a href="#none">오시는 길</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#none">관람안내</a>
+                                    <ul class="depth2">
+                                        <li><a href="#none">관람</a></li>
+                                        <li><a href="#none">전시</a></li>
+                                        <li><a href="#none">오디오 가이드 APP</a></li>
+                                        <li><a href="#none">리움호암 셔틀버스예약</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#none">커뮤니티</a>
+                                    <ul class="depth2">
+                                        <li><a href="#none">공지</a></li>
+                                        <li><a href="#none">보도자료</a></li>
+                                        <li><a href="#none"><span>온라인 스토어</span></a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#none">프로그램</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="gnb_close">메뉴닫기</button>
+                        <div class="tnb">
+                            <ul>
+                                <li><a href="#none">JOIN US</a></li>
+                                <li><a href="#none">LOGIN</a></li>
+                                <li><a href="https://www.leeumhoam.org/leeum">LEEUM</a></li>
+                            </ul>
+                        </div>
+                        <div class="leeum">
+                            <a href="https://www.leeumhoam.org/leeum">LEEUM</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -74,13 +81,11 @@
                     </div>
                     <div class="tit">
                         <h2>ABOUT HOAM</h2>
-                        <P>호암미술관은 삼성그룹의 창업자인 호암 이병철 선생이<br>
-                            30여 년에 걸쳐 수집한<br class="m_768"> 한국미술품을 바탕으로 1982년 4월 22일에<br>
-                            개관한 사립 미술관입니다.<br class="m_768"> 우리 국민에게 문화 창조의 꿈을 주고<br>
-                            민족문화의 산 교육장이 되는 장소이기를 원했던<br class="m_768"> 창업자의 설립취지에 따라<br>
-                            호암미술관은 어린이에서 어른, 학생에서 전문가에 이르는<br><br class="m_768">
-                            모든 관람객들이 문화예술을 통하여 미래에 대한 창조적 가치를 발견하고<br><br class="m_768">
-                            역사와 예술에 대한 통찰력을 키울 수 있는 교육의 장이 되기를 희망합니다.</P>
+                        <P>호암미술관은 삼성그룹의 창업자인 호암 이병철 선생이 30여 년에 걸쳐 수집한<br class="m_768"> 한국미술품을 바탕으로<br>
+                            1982년 4월 22일에 개관한 사립 미술관입니다.<br><br class="m_768">
+                            우리 국민에게 문화 창조의 꿈을 주고 민족문화의  교육장이 되는 장소이기를 원했던<br class="m_768"> 창업자의 설립취지에<br>
+                            따라 호암미술관은 어린이에서 어른, 학생에서 문가에 이르는<br class="m_768"> 모든 관람객들이 문화예술을 통하여 미래에<br>
+                            대한 창조적 가치를 발견하고<br class="m_768"> 역사와 예술에 대한 찰력을 키울 수 있는 교육의 장이 되기를 희망합니다.</P>
                     </div>
                     <div class="subtit">
                         <em>museum<br>appearance</em>
@@ -96,8 +101,8 @@
                         <h2>SPACE</h2>
                         <p>2023년 호암미술관은 관람객 편의와 전시환경 개선을 목표로 건축 내부에 대한<br class="m_768"> 리노베이션을 진행하였습니다.<br>
                             기존의 건축적 헤리티지를 유지하면서도 그것을<br class="m_768"> 동시대적으로 재해석하고자,<br>
-                            서로 꿰뚫어 들어감을 뜻하는 '상호관입(相互貫入)'을<br class="m_768"> 공간개념으로 하였습니다.<br>
-                            또한 기존의 건축 소재와 조화를 이루도록 돌(석재),<br class="m_768"> 나무(목재), 철(금속)을 최소한의 가공을 통하여 사용하였습니다.<br>
+                            서로 꿰뚫어<br class="m_1600"> 들어감을 뜻하는 '상호관입(相互貫入)'을<br class="m_768"> 공간개념으로 하였습니다.<br>
+                            또한 기존의 건축 소재와 조화를 이루도록 돌(석재),<br class="m_768"> 나무(목재), 철(금속)을 최소한의 가공을 통하여 사용하였습니다.<br><br class="m_1600">
                             이를 통해 과거와 현재,<br class="m_768"> 외부와 내부, 건축과 사람 그리고 자연이 유연하게 연결되는 공간을 지향하였습니다.</p>
                     </div>
                 </div>
@@ -348,12 +353,13 @@
                         </div>
                     </div>
                     <div class="familysite">
-                        <button>FAMILY SITE</button>
+                        <button class="open" title="Click to Open">FAMILY SITE</button>
                         <ul>
                             <li><a href="#none">삼성재단</a></li>
                             <li><a href="#none">WANA</a></li>
                             <li><a href="#none">리움미술관</a></li>
                         </ul>
+                        <button class="close" title="Click to Close">FAMILY SITE</button>
                     </div>
                 </div>
                 <div class="last">
