--- a/HOAM_MUSEUM_OF_ART/index.html
+++ b/HOAM_MUSEUM_OF_ART/index.html
@@ -18,7 +18,7 @@
         <a href="#gnb">대메뉴 바로가기</a>
     </div>
     <div id="wrap">
-        <header class="menu_open">
+        <header>
             <div class="wrapper">
                 <div class="inner">
                     <h2 class="logo">
@@ -115,9 +115,18 @@
                     <em>museum interior</em>
                 </div>
             </div>
+            <div class="more"><button class="about_more">MORE VIEW</button></div>
         </section>
         <section class="exhibit">
             <div class="wrapper">
+                <div class="text">
+                    <ul>
+                        <li class="outline">EXHIBITING NOW</li>
+                        <li class="fill">EXHIBITING NOW</li>
+                        <li class="outline">EXHIBITING NOW</li>
+                        <li class="outline">EXHIBITING NOW</li>
+                    </ul>
+                </div>
                 <div class="wrapper2">
                     <div class="swiper">
                         <ul class="swiper-wrapper">
@@ -159,14 +168,6 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="text">
-                        <ul>
-                            <li class="outline">EXHIBITING NOW</li>
-                            <li class="fill">EXHIBITING NOW</li>
-                            <li class="outline">EXHIBITING NOW</li>
-                            <li class="outline">EXHIBITING NOW</li>
-                        </ul>
-                    </div>
                     <div class="btn">
                         <a href="#none"><span>예약·예매 하기</span></a>
                     </div>
@@ -183,8 +184,8 @@
                                 <img src="images/sns_01.png" alt="" class="normal">
                                 <img src="images/sns_hover_01.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1212 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1212 <em>Likes</em></span>
+                                    <span class="reply">20</span>
                                     <p class="text"><span>3월에 진행되는 미술관 프로그램을 소개합니다.<br>
                                         각 프로그램 별 상세 내용과 참여신청은<br>
                                         홈페이지를 확인해주세요</span></p>
@@ -196,8 +197,8 @@
                                 <img src="images/sns_02.png" alt="" class="normal">
                                 <img src="images/sns_hover_02.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">4196 <em>Likes</em>
-                                    </span>
+                                    <span class="like">4196 <em>Likes</em></span>
+                                    <span class="reply">8</span>
                                     <p class="text"><span>오늘은 낮과 밤의 길이가 같은 '춘분'입니다.<br>
                                         오늘부터는 낮의 길이가 조금씩 더 길어지고,<br>
                                         따스한 봄도 찾아오겠지요?<br>
@@ -210,8 +211,8 @@
                                 <img src="images/sns_03.png" alt="" class="normal">
                                 <img src="images/sns_hover_03.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1031 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1031 <em>Likes</em></span>
+                                    <span class="reply">11</span>
                                     <p class="text"><span>여러분들의 뜨거운 성원에 힘입어<br>
                                         《조선의 백자, 군자지향 君子志向》<br>
                                         전 도록 3쇄가 제작되었습니다.<br>
@@ -227,8 +228,8 @@
                                 <img src="images/sns_04.png" alt="" class="normal">
                                 <img src="images/sns_hover_04.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1778 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1778 <em>Likes</em></span>
+                                    <span class="reply">7</span>
                                     <p class="text"><span>2024년을 맞이하여 리움과 호암의 무료 관람<br>
                                         대상을 확대합니다. 매표 시 해당 사항을<br>
                                         증빙하시면 유료전시를 무료로 관람하실 수<br>
@@ -243,8 +244,8 @@
                                 <img src="images/sns_01.png" alt="" class="normal">
                                 <img src="images/sns_hover_01.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1212 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1212 <em>Likes</em></span>
+                                    <span class="reply">20</span>
                                     <p class="text"><span>3월에 진행되는 미술관 프로그램을 소개합니다.<br>
                                         각 프로그램 별 상세 내용과 참여신청은<br>
                                         홈페이지를 확인해주세요</span></p>
@@ -256,8 +257,8 @@
                                 <img src="images/sns_02.png" alt="" class="normal">
                                 <img src="images/sns_hover_02.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">4196 <em>Likes</em>
-                                    </span>
+                                    <span class="like">4196 <em>Likes</em></span>
+                                    <span class="reply">8</span>
                                     <p class="text"><span>오늘은 낮과 밤의 길이가 같은 '춘분'입니다.<br>
                                         오늘부터는 낮의 길이가 조금씩 더 길어지고,<br>
                                         따스한 봄도 찾아오겠지요?<br>
@@ -270,8 +271,8 @@
                                 <img src="images/sns_03.png" alt="" class="normal">
                                 <img src="images/sns_hover_03.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1031 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1031 <em>Likes</em></span>
+                                    <span class="reply">11</span>
                                     <p class="text"><span>여러분들의 뜨거운 성원에 힘입어<br>
                                         《조선의 백자, 군자지향 君子志向》<br>
                                         전 도록 3쇄가 제작되었습니다.<br>
@@ -287,8 +288,8 @@
                                 <img src="images/sns_04.png" alt="" class="normal">
                                 <img src="images/sns_hover_04.png" alt="" class="hover">
                                 <div class="tit">
-                                    <span class="like">1778 <em>Likes</em>
-                                    </span>
+                                    <span class="like">1778 <em>Likes</em></span>
+                                    <span class="reply">7</span>
                                     <p class="text"><span>2024년을 맞이하여 리움과 호암의 무료 관람<br>
                                         대상을 확대합니다. 매표 시 해당 사항을<br>
                                         증빙하시면 유료전시를 무료로 관람하실 수<br>
@@ -306,6 +307,7 @@
                         <span>THEN CLICK</span>
                     </a>
                 </div>
+                <div class="center"><button>MORE VIEW</button></div>
             </div>
         </section>
         <section class="contact">
@@ -324,9 +326,9 @@
                         <h3>PHONE</h3>
                         <p>031-320-1801~2</p>
                     </div>
-                    <div class="btn">
-                        <a href="#none"><span>e-mail inquiry</span></a>
-                    </div>
+                </div>
+                <div class="btn">
+                    <a href="#none"><span>e-mail inquiry</span></a>
                 </div>
             </div>
         </section>
