--- a/HOAM_MUSEUM_OF_ART/index.html
+++ b/HOAM_MUSEUM_OF_ART/index.html
@@ -75,7 +75,7 @@
         </header>
         <section class="about">
             <div class="wrapper">
-                <div class="about_1">
+                <div class="about_top">
                     <div class="photo">
                         <img src="images/about_1.png" alt="">
                     </div>
@@ -91,31 +91,29 @@
                         <em>museum<br>appearance</em>
                     </div>
                 </div>
-            </div>
-            <div class="about_2">
-                <div class="photo">
-                    <img src="images/about_2.png" alt="">
-                </div>
-                <div class="wrapper">
-                    <div class="tit">
-                        <h2>SPACE</h2>
-                        <p>2023년 호암미술관은 관람객 편의와 전시환경 개선을 목표로 건축 내부에 대한<br class="m_768"> 리노베이션을 진행하였습니다.<br>
-                            기존의 건축적 헤리티지를 유지하면서도 그것을<br class="m_768"> 동시대적으로 재해석하고자,<br>
-                            서로 꿰뚫어<br class="m_1600"> 들어감을 뜻하는 '상호관입(相互貫入)'을<br class="m_768"> 공간개념으로 하였습니다.<br>
-                            또한 기존의 건축 소재와 조화를 이루도록 돌(석재),<br class="m_768"> 나무(목재), 철(금속)을 최소한의 가공을 통하여 사용하였습니다.<br><br class="m_1600">
-                            이를 통해 과거와 현재,<br class="m_768"> 외부와 내부, 건축과 사람 그리고 자연이 유연하게 연결되는 공간을 지향하였습니다.</p>
+                <div class="about_sub">
+                    <div class="about_left">
+                        <div class="photo">
+                            <img src="images/about_2.png" alt="">
+                        </div>
+                        <div class="tit">
+                            <h2>SPACE</h2>
+                            <p>2023년 호암미술관은 관람객 편의와 전시환경 개선을 목표로 건축 내부에 대한<br class="m_768"> 리노베이션을 진행하였습니다.<br>
+                                기존의 건축적 헤리티지를 유지하면서도 그것을<br class="m_768"> 동시대적으로 재해석하고자,<br>
+                                서로 꿰뚫어<br class="m_1600"> 들어감을 뜻하는 '상호관입(相互貫入)'을<br class="m_768"> 공간개념으로 하였습니다.<br>
+                                또한 기존의 건축 소재와 조화를 이루도록 돌(석재),<br class="m_768"> 나무(목재), 철(금속)을 최소한의 가공을 통하여 사용하였습니다.<br><br class="m_1600">
+                                이를 통해 과거와 현재,<br class="m_768"> 외부와 내부, 건축과 사람 그리고 자연이 유연하게 연결되는 공간을 지향하였습니다.</p>
+                        </div>
+                    </div>
+                    <div class="about_right">
+                        <div class="photo">
+                            <img src="images/about_3.png" alt="">
+                        </div>
+                        <em>museum interior</em>
                     </div>
                 </div>
+                <div class="more"><button class="about_more">MORE VIEW</button></div>
             </div>
-            <div class="wrapper">
-                <div class="about_3">
-                    <div class="photo">
-                        <img src="images/about_3.png" alt="">
-                    </div>
-                    <em>museum interior</em>
-                </div>
-            </div>
-            <div class="more"><button class="about_more">MORE VIEW</button></div>
         </section>
         <section class="exhibit">
             <div class="wrapper">
