--- a/HOAM_MUSEUM_OF_ART/index.html
+++ b/HOAM_MUSEUM_OF_ART/index.html
@@ -29,28 +29,28 @@
                         <div class="gnb">
                             <ul class="depth1">
                                 <li>
-                                    <a href="#none">호암</a>
+                                    <a href="contents/intro.html">호암</a>
                                     <ul class="depth2">
-                                        <li><a href="#none">미술관 소개</a></li>
-                                        <li><a href="#none">전통정원 희원</a></li>
-                                        <li><a href="#none">오시는 길</a></li>
+                                        <li><a href="contents/intro.html">미술관 소개</a></li>
+                                        <li><a href="contents/intro.html">전통정원 희원</a></li>
+                                        <li><a href="contents/intro.html">오시는 길</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#none">관람안내</a>
+                                    <a href="contents/exhibition.html">관람안내</a>
                                     <ul class="depth2">
-                                        <li><a href="#none">관람</a></li>
-                                        <li><a href="#none">전시</a></li>
-                                        <li><a href="#none">오디오 가이드 APP</a></li>
-                                        <li><a href="#none">리움호암 셔틀버스예약</a></li>
+                                        <li><a href="contents/exhibition.html">관람</a></li>
+                                        <li><a href="contents/exhibition.html">전시</a></li>
+                                        <li><a href="contents/exhibition.html">오디오 가이드 APP</a></li>
+                                        <li><a href="contents/exhibition.html">리움호암 셔틀버스예약</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#none">커뮤니티</a>
+                                    <a href="contents/notice.html">커뮤니티</a>
                                     <ul class="depth2">
-                                        <li><a href="#none">공지</a></li>
-                                        <li><a href="#none">보도자료</a></li>
-                                        <li><a href="#none"><span>온라인 스토어</span></a></li>
+                                        <li><a href="contents/notice.html">공지</a></li>
+                                        <li><a href="contents/notice.html">보도자료</a></li>
+                                        <li><a href="contents/notice.html"><span>온라인 스토어</span></a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -169,7 +169,7 @@
                         </ul>
                     </div>
                     <div class="btn">
-                        <a href="#none"><span>예약·예매 하기</span></a>
+                        <a href="contents/exhibition.html"><span>예약·예매 하기</span></a>
                     </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                     </ul>
                 </div>
                 <div class="btn">
-                    <a href="https://www.instagram.com/leeummuseumofart">
+                    <a href="contents/notice.html">
                         <p>DO YOU WANT SEE MORE?</p>
                         <span>THEN CLICK</span>
                     </a>
@@ -339,10 +339,10 @@
                         <div class="info">
                             <ul>
                                 <li><a href="#none">개인정보처리방침</a></li>
-                                <li><a href="#none" class="delete">미술관 소개</a></li>
+                                <li><a href="contents/intro.html" class="delete">미술관 소개</a></li>
                                 <li><a href="#none">이메일문의</a></li>
-                                <li><a href="#none" class="delete">보도자료</a></li>
-                                <li><a href="#none" class="delete">공지</a></li>
+                                <li><a href="contents/notice.html" class="delete">보도자료</a></li>
+                                <li><a href="contents/notice.html" class="delete">공지</a></li>
                             </ul>
                         </div>
                         <div class="add">17021 경기도 용인시 처인구 포곡읍 에버랜드로 562번길 38</div>
