--- a/KS_WALLCOVERINGS/index.html
+++ b/KS_WALLCOVERINGS/index.html
@@ -94,7 +94,8 @@
                         <div class="swiper">
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
-                                    <img src="images/main/visual_1.png" alt="">
+                                    <img src="images/main/visual_1.png" alt="" class="pc">
+                                    <img src="images/main/visual_m_1.png" alt="" class="m">
                                     <div class="tit">
                                         <div class="tit_top">
                                             <h2>더뷰</h2>
@@ -105,10 +106,12 @@
                                             <span>내 공간을 특별하게 만드는 한 끗 차이.<br>
                                                 더뷰가 수놓은 감각적인 디자인으로 내가 가장 좋아하는 공간을 만들어보세요.</span>
                                         </div>
+                                        <div class="tit_m"><em>공간을 완성시키다.</em></div>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <img src="images/main/visual_2.png" alt="">
+                                    <img src="images/main/visual_2.png" alt="" class="pc">
+                                    <img src="images/main/visual_m_2.png" alt="" class="m">
                                     <div class="tit">
                                         <div class="tit_top">
                                             <h2>더홈</h2>
@@ -119,10 +122,12 @@
                                             <span>더홈과 함께 완성하는 나만의 인테리어.<br>
                                                 생기를 불어넣는 산뜻한 디자인으로 당신의 일상이 더욱 특별해지는 공간을 만들어보세요.</span>
                                         </div>
+                                        <div class="tit_m"><em>공간에 개성을 입히다.</em></div>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <img src="images/main/visual_3.png" alt="">
+                                    <img src="images/main/visual_3.png" alt="" class="pc">
+                                    <img src="images/main/visual_m_3.png" alt="" class="m">
                                     <div class="tit">
                                         <div class="tit_top">
                                             <h2>이룸</h2>
@@ -133,10 +138,12 @@
                                             <span>이룸으로 탄생하는 고급스러운 무드.<br>
                                                 프리미엄 벽지의 우아한 멋스러움으로 한결 더 특별해진 당신만의 공간을 이뤄 나가세요.</span>
                                         </div>
+                                        <div class="tit_m"><em>가치가 다른 벽지.</em></div>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <img src="images/main/visual_4.png" alt="">
+                                    <img src="images/main/visual_4.png" alt="" class="pc">
+                                    <img src="images/main/visual_m_4.png" alt="" class="m">
                                     <div class="tit">
                                         <div class="tit_top">
                                             <h2>벨루체</h2>
@@ -147,6 +154,7 @@
                                             <span>벨루체가 제안하는 합리적인 라이프스타일.<br>
                                                 편안한 내추럴부터 세련된 모던함까지 벨루체만의 은은하고 따뜻한 감성을 느껴보세요.</span>
                                         </div>
+                                        <div class="tit_m"><em>나만의 공간을 이루다.</em></div>
                                     </div>
                                 </li>
                             </ul>
@@ -162,9 +170,12 @@
                         <div class="swiper">
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide"><!--flex txt/photo 좌우 배치-->
-                                    <div class="swatch"><img src="images/main/swatch_test.png" alt=""></div><!-- absolute로 높이/넓이 % -->
+                                    <div class="swatch">
+                                        <img src="images/main/swatch_1.png" alt="" class="pc">
+                                        <img src="images/main/swatch_m_1.png" alt="" class="m">
+                                    </div><!-- absolute로 높이/넓이 % -->
                                     <div class="txt">
-                                        <span>더뷰는 스타일리시한 컬러와<br>
+                                        <span class="tit">더뷰는 스타일리시한 컬러와<br>
                                             패턴 디자인으로 트렌디함을 갖춘<br>
                                             고급 실크벽지 컬렉션입니다.
                                         </span>
@@ -175,12 +186,18 @@
                                             <li><span>E ROOM</span></li>
                                         </ul>
                                     </div>
-                                    <div class="photo"><img src="images/main/collection_1.png" alt=""></div><!-- li의 높이 결정 왼쪽여백을 % 넓이도 % , 이미지는 100% -->
+                                    <div class="photo">
+                                        <img src="images/main/collection_1.png" alt="" class="pc">
+                                        <img src="images/main/collection_m_1.png" alt="" class="m">
+                                    </div><!-- li의 높이 결정 왼쪽여백을 % 넓이도 % , 이미지는 100% -->
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="swatch"><img src="images/main/swatch_2.png" alt=""></div>
+                                    <div class="swatch">
+                                        <img src="images/main/swatch_2.png" alt="" class="pc">
+                                        <img src="images/main/swatch_m_2.png" alt="" class="m">
+                                    </div>
                                     <div class="txt">
-                                        <span>더홈은 어떠한 공간이던<br>
+                                        <span class="tit">더홈은 어떠한 공간이던<br>
                                             화사하게 밝혀주는 컬러와<br>
                                             디자인의 소폭 합지벽지 컬렉션입니다.
                                         </span>
@@ -191,12 +208,18 @@
                                             <li><span>E ROOM</span></li>
                                         </ul>
                                     </div>
-                                    <div class="photo"><img src="images/main/collection_2.png" alt=""></div>
+                                    <div class="photo">
+                                        <img src="images/main/collection_2.png" alt="" class="pc">
+                                        <img src="images/main/collection_m_2.png" alt="" class="m">
+                                    </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="swatch"><img src="images/main/swatch_3.png" alt=""></div>
+                                    <div class="swatch">
+                                        <img src="images/main/swatch_3.png" alt="" class="pc">
+                                        <img src="images/main/swatch_m_3.png" alt="" class="m">
+                                    </div>
                                     <div class="txt">
-                                        <span>벨루체는 깔끔한 컬러와 모던한 디자인,<br>
+                                        <span class="tit">벨루체는 깔끔한 컬러와 모던한 디자인,<br>
                                             풍부한 텍스쳐감까지 겸비한<br>
                                             친환경 합지벽지 컬렉션입니다.
                                         </span>
@@ -207,12 +230,18 @@
                                             <li><span>E ROOM</span></li>
                                         </ul>
                                     </div>
-                                    <div class="photo"><img src="images/main/collection_3.png" alt=""></div>
+                                    <div class="photo">
+                                        <img src="images/main/collection_3.png" alt="" class="pc">
+                                        <img src="images/main/collection_m_3.png" alt="" class="m">
+                                    </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="swatch"><img src="images/main/swatch_4.png" alt=""></div>
+                                    <div class="swatch">
+                                        <img src="images/main/swatch_4.png" alt="" class="pc">
+                                        <img src="images/main/swatch_m_4.png" alt="" class="m">
+                                    </div>
                                     <div class="txt">
-                                        <span>더뷰는 스타일리시한 컬러와<br>
+                                        <span class="tit">더뷰는 스타일리시한 컬러와<br>
                                             패턴 디자인으로 트렌디함을 갖춘<br>
                                             고급 실크벽지 컬렉션입니다.
                                         </span>
@@ -223,12 +252,18 @@
                                             <li><span>E ROOM</span></li>
                                         </ul>
                                     </div>
-                                    <div class="photo"><img src="images/main/collection_4.png" alt=""></div>
+                                    <div class="photo">
+                                        <img src="images/main/collection_4.png" alt="" class="pc">
+                                        <img src="images/main/collection_m_4.png" alt="" class="m">
+                                    </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="swatch"><img src="images/main/swatch_5.png" alt=""></div>
+                                    <div class="swatch">
+                                        <img src="images/main/swatch_5.png" alt="" class="pc">
+                                        <img src="images/main/swatch_m_5.png" alt="" class="m">
+                                    </div>
                                     <div class="txt">
-                                        <span>이룸은 다양한 소재감과 세련된 컬러를 활용해,<br>
+                                        <span class="tit">이룸은 다양한 소재감과 세련된 컬러를 활용해,<br>
                                             풍성한 디자인과 고급스러운 컬러의<br>
                                             프리미엄 실크 벽지 컬렉션입니다.
                                         </span>
@@ -239,7 +274,10 @@
                                             <li class="active"><span>E ROOM</span></li>
                                         </ul>
                                     </div>
-                                    <div class="photo"><img src="images/main/collection_5.png" alt=""></div>
+                                    <div class="photo">
+                                        <img src="images/main/collection_5.png" alt="" class="pc">
+                                        <img src="images/main/collection_m_5.png" alt="" class="m">
+                                    </div>
                                 </li>
                             </ul>
                         </div>
